syntax = "proto3";
package idaproto;
option go_package = "../pbs";

//通用code
enum Code {
  Unknown = 0; //未知
  Ok = 1; //成功
  TokenInvalid = 401; //token失效
  ParameterError = 402; //参数错误
  Exists = 403; //已存在
  NotExists = 404; //不存在
  SystemError = 405; //系统错误
  DbError = 406; //数据库错误
  StatusError = 407; //状态错误
  AmountInsufficientError = 408; //余额不足
}

//------------------- 公共头部(无消息ID) -------------------
message req_head {
  int32 uid = 1; //唯一码
  string token = 2; //token信息，可留空
  string platform = 3; //平台名称
  bool demo = 4; //是否为试玩
}

message ack_head {
  int32 uid = 1; //唯一码
  Code code = 2; //状态码
  string message = 3; //消息
}

message recharge {
  req_head head = 1; //公共头部
  int64 amount = 2; //充值金额
  int32 type = 3; //支付类型
}

message recharge_ack {
  ack_head head = 1; //公共头部
  int64 amount = 2; //余额
}

message amount {
  req_head head = 1; //公共头部
}

message amount_ack {
  ack_head head = 1; //公共头部
  int64 amount = 2; //余额
}

//埋点类型
enum tracking_type {
  login = 0; //登录
  login_success = 1; //登录成功
  load_resources = 3; //加载资源
  load_resources_finish = 4; //加载资源成功
}

//埋点请求
message tracking {
  req_head head = 1;
  tracking_type type = 2; //埋点类型
}

//请求配置
message spin_opt{
  int32 game_id = 1; //游戏id
  int64 bet = 2; //下注
  bool raise = 3; //加注
  bool buy_free = 4; //购买免费次数
  bool buy_re= 5; //购买重转
}

//进入游戏回复
message into_game_ack {
  ack_head  head = 1;
  repeated int64 bet = 4; //下注
}
